--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
 </head>
 
 <body>
-<div class="tree">
-<div class="name">DATA KUMUH ABDYA</div>
+<div class="data">
+  <div class="name">DATA KUMUH ABDYA</div>
     <div class="links">
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxG296sTg0vpDCXsft77ARNwe5Br6JMbDUpEb9aS3LfY7O2A/viewform" class="btn btn-outline-primary btn-lg btn-block">Form Isian Data</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxG296sTg0vpDCXsft77ARNwe5Br6JMbDUpEb9aS3LfY7O2A/viewform" class="btn btn-outline-primary btn-lg btn-block">Form Isian Data</a>
       <a href="https://docs.google.com/spreadsheets/d/1i6RYVslOE-ywblatU4X04v1i7bx7Cj_4kLwRhb0cqJ8/edit#gid=1602770400" class="btn btn-outline-primary btn-lg btn-block">Hasil Input</a>
     </div>
-  <div class="footer"><span>2023 &copy farzal</span></div>
+  
+  <div class="footer">
+    <span>2023 &copy farzal</span>
+  </div>
+  
 </div>
 </body>
 </html>
