--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-<div class="data">
+<div class="tree">
   <div class="name">DATA KUMUH ABDYA</div>
     <div class="links">
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxG296sTg0vpDCXsft77ARNwe5Br6JMbDUpEb9aS3LfY7O2A/viewform" class="btn btn-outline-primary btn-lg btn-block">Form Isian Data</a>
