--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="name">DATA KUMUH ABDYA</div>
     <div class="links">
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxG296sTg0vpDCXsft77ARNwe5Br6JMbDUpEb9aS3LfY7O2A/viewform" class="btn btn-outline-primary btn-lg btn-block">Form Isian Data</a><br>
-      <a href="https://docs.google.com/spreadsheets/d/1i6RYVslOE-ywblatU4X04v1i7bx7Cj_4kLwRhb0cqJ8/edit#gid=1602770400" class="btn btn-outline-primary btn-lg btn-block">Hasil Input</a>
+      <a href="https://docs.google.com/spreadsheets/d/1i6RYVslOE-ywblatU4X04v1i7bx7Cj_4kLwRhb0cqJ8/edit#gid=1602770400" class="btn btn-outline-secondary btn-lg btn-block">Hasil Input</a>
     </div>
   
   <div class="footer">
