--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <div class="tree">
   <div class="name">DATA KUMUH ABDYA</div>
   <div class="bio">
-    <p>"Bidang Kawasan Permukiman"</p>
-    <p>"DISPERKIMLH ABDYA"</p>
+    <p>Bidang Kawasan Permukiman</p>
+    <p>DISPERKIMLH-ABDYA</p>
   </div>
     <div class="links">
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxG296sTg0vpDCXsft77ARNwe5Br6JMbDUpEb9aS3LfY7O2A/viewform" class="btn btn-outline-primary btn-sm btn-block">Form Isian Data</a><br>
