--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <p>DISPERKIMLH-ABDYA</p>
   </div>
     <div class="links">
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxG296sTg0vpDCXsft77ARNwe5Br6JMbDUpEb9aS3LfY7O2A/viewform" class="btn btn-outline-primary btn-sm btn-block">Form Isian Data</a><br>
-      <a href="https://docs.google.com/spreadsheets/d/1i6RYVslOE-ywblatU4X04v1i7bx7Cj_4kLwRhb0cqJ8/edit#gid=1602770400" class="btn btn-outline-primary btn-sm btn-block">Hasil Input</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxG296sTg0vpDCXsft77ARNwe5Br6JMbDUpEb9aS3LfY7O2A/viewform" class="btn btn-outline-success btn-sm btn-block">Form Isian Data</a><br>
+      <a href="https://docs.google.com/spreadsheets/d/1i6RYVslOE-ywblatU4X04v1i7bx7Cj_4kLwRhb0cqJ8/edit#gid=1602770400" class="btn btn-outline-success btn-sm btn-block">Lihat Hasil Input</a>
     </div>
   
   <div class="footer">
