--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
   
   <div class="footer">
-    <span>2023 &copy <a href="https://farzal.space/">farzal182</a></span>
+    <span>2023 &copy farzal182</span>
   </div>
   
 </div>
