--- a/index.html
+++ b/index.html
@@ -23,9 +23,21 @@
     <p>Bidang Kawasan Permukiman</p>
     <p>DISPERKIMLH-ABDYA</p>
   </div>
+        <br>
+    <p>Form Isian Data</p>
     <div class="links">
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxG296sTg0vpDCXsft77ARNwe5Br6JMbDUpEb9aS3LfY7O2A/viewform" class="btn btn-outline-success btn-sm btn-block">Form Isian Data</a><br>
-      <a href="https://docs.google.com/spreadsheets/d/1i6RYVslOE-ywblatU4X04v1i7bx7Cj_4kLwRhb0cqJ8/edit#gid=1602770400" class="btn btn-outline-success btn-sm btn-block">Lihat Hasil Input</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxG296sTg0vpDCXsft77ARNwe5Br6JMbDUpEb9aS3LfY7O2A/viewform" class="btn btn-outline-success btn-sm btn-block">Kab.Abdya</a>
+      <a href="https://forms.gle/Qmh3kFnirqJKQBn69" class="btn btn-outline-success btn-sm btn-block">Tangan-Tangan</a>
+      <a href="https://forms.gle/oVE49n2X6Y5eR983A" class="btn btn-outline-success btn-sm btn-block">Manggeng</a>
+      <a href="https://forms.gle/2RLMTsXWK3dztJut6" class="btn btn-outline-success btn-sm btn-block">Lembah Sabil</a>
+    </div>
+    <br>   
+    <p>Hasil Input Data:</p>
+    <div class="links">
+      <a href="https://docs.google.com/spreadsheets/d/1i6RYVslOE-ywblatU4X04v1i7bx7Cj_4kLwRhb0cqJ8/edit#gid=1602770400" class="btn btn-outline-success btn-sm btn-block">Kab.Abdya</a>
+      <a href="https://docs.google.com/spreadsheets/d/1H32bFEDbgDrPPVei91H6k9gn4FJXYYWA4rHOqufKbGk/edit?usp=sharing" class="btn btn-outline-success btn-sm btn-block">Tangan-Tangan</a>
+      <a href="https://docs.google.com/spreadsheets/d/1TtY1v1RHjTO5G_3dLXZkppFJoQ1zJL6DxB6XuAqhwqo/edit?usp=sharing" class="btn btn-outline-success btn-sm btn-block">Manggeng</a>
+      <a href="https://docs.google.com/spreadsheets/d/1as7TfYhywXo9wj9R60sMsZnHYF1rDWkjUS_IJVM5io8/edit?usp=sharing" class="btn btn-outline-success btn-sm btn-block">Lembah Sabil</a>
     </div>
   
   <div class="footer">
