--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <br>
     <p>Form Isian Data</p>
     <div class="links">
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxG296sTg0vpDCXsft77ARNwe5Br6JMbDUpEb9aS3LfY7O2A/viewform" class="btn btn-outline-success btn-sm btn-block">Kab.Abdya</a>
+      <a href="https://forms.gle/gTYHN8gjfTcUmosY8" class="btn btn-outline-success btn-sm btn-block">Kab.Abdya</a>
       <a href="https://forms.gle/Qmh3kFnirqJKQBn69" class="btn btn-outline-success btn-sm btn-block">Tangan-Tangan</a>
       <a href="https://forms.gle/oVE49n2X6Y5eR983A" class="btn btn-outline-success btn-sm btn-block">Manggeng</a>
       <a href="https://forms.gle/2RLMTsXWK3dztJut6" class="btn btn-outline-success btn-sm btn-block">Lembah Sabil</a>
